@@ -5,6 +5,8 @@ Changelog
 1.0.4 (unreleased)
 ------------------
 
+- Include disk usage (Data.fs and blobstorage) in stats. [lgraf]
+
 - Add Plone 5 compatibility. [phgross]
 
 1.0.3 (2017-09-08)
